# server.js
@@ -3,13 +3,68 @@ const mongodb = require('./data/database.js');
 const app = express();
 const swaggerUi = require('swagger-ui-express')
 const swaggerDocument = require('./swagger-output.json');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
+const bodyParser = require('body-parser');
+
 
 const port = process.env.PORT || 3000;
 
 app
-    .use(express.json())
+    .use(bodyParser.json())
+    .use(session({
+        secret: "secret",
+        resave: false,
+        saveUninitialized: true ,
+    }))
+    .use(passport.initialize())
+    .use(passport.session())
+    .use((req, res, next) => {
+        res.setHeader("Access-Control-Allow-Origin", "*");
+        res.setHeader(
+            "Access-Control-Allow-Headers",
+            "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization"
+        );
+        res.setHeader(
+            "Access-Control-Allow-Methods",
+            "POST, GET, PUT, DELETE"
+        );
+        next();
+    })
+    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'PUT']}))
+    .use(cors({ origin: '*'}))
     .use('/', require('./routes'))
     .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+    passport.use(new GitHubStrategy({
+        clientID: process.env.GITHUB_CLIENT_ID,
+        clientSecret: process.env.GITHUB_CLIENT_SECRET,
+        callbackURL: process.env.CALLBACK_URL
+    },
+    function(accessToken, refreshToken, profile, done) {
+        //User.findOrCreate({ githubId: profile.id }, function (err, user){
+            return done(null, profile);
+        //});
+    }
+));
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+})
+passport.deserializeUser((user, done) => {
+    done(null, user);
+})
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")});
+
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session: false}),
+    (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
 
 mongodb.initDb((err) => {
     if(err) {
